--- a/maincontentstyle.css
+++ b/maincontentstyle.css
@@ -1,6 +1,6 @@
 #top-content {
   display: flex;
-  padding-top: 30px;
+  padding-top: 20px;
   padding-bottom: 30px;
   justify-content: space-between;
 }
@@ -42,6 +42,7 @@ textarea {
   background-color: #fafafa;
   border: none;
   margin-bottom: 10px;
+  font-family: 'Inter', sans-serif;
 }
 .footer-task{
   padding-top: 10px;
@@ -52,6 +53,8 @@ button#release{
   background-color: #ddd;
   border: none;
   padding: 5%;
+  border-radius: 5%;
+  height: 80%;
 }
 
 .column {
@@ -79,4 +82,7 @@ button#release{
   color: red;
   margin-top: 1vh;
   margin-right: 1vw;
+}
+#project-title{
+  margin-top: 3vh;
 }
