--- a/sidebarstyle.css
+++ b/sidebarstyle.css
@@ -1,9 +1,9 @@
 #sidebar {
-  width: 15%;
-  background-color: #f4f4f4;
+  width: 20%;
+  background-color: white;
   padding: 16px;
   overflow-y: auto;
-  border-right: 1px solid #ddd;
+  border-right: 4px solid #ddd;
 }
 #sidebar ul {
   list-style: none;
@@ -37,8 +37,11 @@ a {
 }
 
 #sidebar li {
-  padding-bottom: 30px;
-  padding-bottom: 30px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  position: relative; 
 }
 
 /* hide sidebar */
@@ -63,15 +66,13 @@ a {
 .fa-ellipsis-h {
   margin: 10px;
 }
-.container-space-between {
-  display: flex;
-  justify-content: space-between;
-}
 button#toggle-sidebar {
   margin-bottom: 1vh;
 }
 
-.sidebar-item span:hover, .nav-item:hover {
-  color: blue;
-  text-decoration: underline;
+#sidebar ul li:hover, .nav-item:hover {
+  background-color: rgb(196, 213, 246);
+  border-bottom: 1px solid darkgray;
+  border-top: 1px solid darkgray;
+  border-radius: 2%;
 }
