--- a/navstyle.css
+++ b/navstyle.css
@@ -19,7 +19,7 @@ header nav li {
 select {
   padding: 5px 10px;
   font-size: 14px;
-  border-style: none;
+  border: none;
   background-color: white;
 }
 
