--- a/maincontentstyle.css
+++ b/maincontentstyle.css
@@ -6,6 +6,7 @@
 }
 section {
   padding-left: 2%;
+  height: 60%;
 }
 #medium-content {
   padding-bottom: 200px;
@@ -25,30 +26,6 @@ label {
   display: flex;
 }
 
-.task i.fa-check-square {
-  color: cyan;
-}
-
-.task i.fa-arrow-up {
-  color: red;
-}
-.content-task{
-  background-color: yellow;
-}
-textarea {
-  overflow: hidden;              
-  height: 60px;
-  width: 100%;
-  background-color: #fafafa;
-  border: none;
-  margin-bottom: 10px;
-  font-family: 'Inter', sans-serif;
-}
-.footer-task{
-  padding-top: 10px;
-  display: flex;
-  justify-content: space-between;
-}
 button#release{
   background-color: #ddd;
   border: none;
@@ -58,31 +35,13 @@ button#release{
 }
 
 .column {
-  width: 20%;
+  width: 24%;
   background-color: #f5f5f5;
   flex-shrink: 0;
   min-height: 80vh;
   height: 100%;
 }
 
-.task {
-  height: 150px;
-  border-bottom: 1px solid grey;
-  border-radius: 5%;
-  background-color:white;
-  margin-bottom: 16px;
-  margin-left: 2%;
-  margin-right: 2%;
-  padding: 3%;
-  word-wrap: break-word;   
-  overflow-wrap: break-word;
-}
-
-.fa-trash-alt{
-  color: red;
-  margin-top: 1vh;
-  margin-right: 1vw;
-}
 #project-title{
   margin-top: 3vh;
 }
