--- a/mainstyle.css
+++ b/mainstyle.css
@@ -25,9 +25,11 @@ aside {
 }
 body {
   font-family: 'Inter', sans-serif;
+  overflow: hidden;
 }
 * {
   color: #44546F;
+  
 }
 h1{
   color: black
