--- a/mainstyle.css
+++ b/mainstyle.css
@@ -38,5 +38,7 @@ h1{
   display: flex;
   justify-content: space-between;
 }
-
-
+button.create:hover{
+  cursor: pointer;
+  background-color: #125ea9;
+}
