--- a/maincontentstyle.css
+++ b/maincontentstyle.css
@@ -35,7 +35,7 @@ button#release{
 }
 
 .column {
-  width: 24%;
+  width: 24.2%;
   background-color: #f5f5f5;
   flex-shrink: 0;
   min-height: 70vh;
@@ -44,4 +44,8 @@ button#release{
 
 #project-title{
   margin-top: 3vh;
+}
+.fa-plus{
+  color: #ddd;
+  background-color: green;
 }
